--- a/Frontend/src/components/ProjectSearch.css
+++ b/Frontend/src/components/ProjectSearch.css
@@ -1,28 +1,27 @@
-/* ProjectSearch.css */
 
 .project-search-container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 20px; /* Adjust the margin as needed for spacing */
+    margin-top: 20px;
 }
 
 .project-search-input {
-    width: 300px; /* Set the width of the input field as needed */
-    padding: 8px; /* Add padding for better visual appearance */
-    margin-bottom: 10px; /* Adjust the margin as needed for spacing */
+    width: 300px;
+    padding: 8px;
+    margin-bottom: 10px;
 }
 
 .project-search-button {
-    background-color: #007bff; /* Set the background color of the button */
-    color: #fff; /* Set the text color of the button */
-    padding: 8px 16px; /* Add padding for better visual appearance */
+    background-color: #007bff;
+    color: #fff;
+    padding: 8px 16px;
     cursor: pointer;
     border: none;
     border-radius: 5px;
-    transition: background-color 0.3s ease; /* Add a transition effect for the background color change */
+    transition: background-color 0.3s ease;
 }
 
 .project-search-button:hover {
-    background-color: #0056b3; /* Set a slightly darker color on hover for the fading effect */
+    background-color: #0056b3;
 }
