--- a/Frontend/src/login.css
+++ b/Frontend/src/login.css
@@ -14,7 +14,7 @@
   width: 120px;
   height: 120px;
   border-radius: 50%;
-  border: 2px solid #333;
+  border: 4px solid #333;
   box-sizing: border-box;
 }
 
@@ -53,6 +53,7 @@ input:focus {
   border: none;
   margin-left: 200px;
   padding: 18px 90px;
+  font-family: 'Madimi One', sans-serif;
   border-radius: 50px;
   cursor: pointer;
   font-size: 1.2em;
