--- a/Frontend/src/login.css
+++ b/Frontend/src/login.css
@@ -21,14 +21,14 @@
 .login-subtitle {
   text-align: left;
   font-family: 'Madimi One', sans-serif;
-  margin-left: 200px;
+  margin-left: 400px;
   font-size: 4em;
 }
 
 
 .form-group {
   text-align: left;
-  margin-left: 200px;
+  margin-left: 400px;
   max-width: 600px;
   margin-bottom: 40px;
 }
@@ -51,7 +51,7 @@ input:focus {
   background-color: black;
   color: white;
   border: none;
-  margin-left: 200px;
+  margin-left: 400px;
   padding: 18px 90px;
   font-family: 'Madimi One', sans-serif;
   border-radius: 50px;
@@ -66,11 +66,11 @@ input:focus {
 
 .create-title {
   font-family: 'Madimi One', sans-serif;
-  margin-left: 200px;
+  margin-left: 400px;
 }
 
 .create-button {
-  margin-left: 193px;
+  margin-left: 393px;
   font-family: 'Madimi One', sans-serif;
   background: none;
   border: none;
@@ -98,4 +98,19 @@ input:focus {
 
 .login-image {
   max-width: 60%;
+}
+
+.copyright-container {
+  background-color: black;
+  color: white;
+  text-align: center;
+  padding: 10px;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+
+.copyright-content {
+  font-size: 0.8em;
+  font-family: 'Madimi One', sans-serif;
 }
