--- a/Frontend/src/ProjectBoard.css
+++ b/Frontend/src/ProjectBoard.css
@@ -1,8 +1,8 @@
 .app-header {
   position: relative;
-  background-color: #dcdcdc; /* Deep sea blue */
+  background-color: #dcdcdc;
   padding: 17px;
-  border-radius: 10px; /* Add border-radius for curved corners */
+  border-radius: 10px;
 }
 
 .website-name {
@@ -21,7 +21,7 @@
   width: 60px;
   height: 60px;
   border-radius: 50%;
-  border: 4px solid #000; /* White border color */
+  border: 4px solid #000;
   box-sizing: border-box;
 }
 
@@ -32,7 +32,7 @@
   right: 0;
   margin: 10px;
   font-size: 24px;
-  outline: 2px solid #000; /* White outline color */
+  outline: 2px solid #000;
   padding: 5px;
   border-left: 2px solid #000;
 }
@@ -41,8 +41,8 @@
   position: absolute;
   top: 100%;
   right: 0;
-  background-color: #fff; /* Deep sea blue */
-  border:2px solid #000; /* White border color */
+  background-color: #fff;
+  border:2px solid #000;
   box-shadow: 0px 15px rgba(0, 0, 0, 0.1);
   padding: 10px;
 }
