--- a/Frontend/src/components/css/ProjectList.css
+++ b/Frontend/src/components/css/ProjectList.css
@@ -1,1 +1,61 @@
+.project-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 20px;
+}
 
+.project-item-link {
+  text-decoration: none;
+}
+
+.project-item {
+  position: relative;
+  min-height: 220px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 40px;
+  box-sizing: border-box;
+  position: relative;
+}
+
+.project-item.blackboard-background {
+  background-image: url('blackboard.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  color: white;
+  padding: 40px;
+  box-sizing: border-box;
+}
+
+.project-item h3, .project-item p, .project-item ul {
+  margin: 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.button-container {
+  position: absolute;
+  top: 15%;
+  right: 11%;
+  display: flex;
+  flex-direction: column;
+}
+
+.button-container button {
+  display: flex;
+  align-items: center;
+  padding: 5px;
+  margin-bottom: 5px;
+  background-color: rgba(255, 255, 255, 0.8);
+  border: none;
+  cursor: pointer;
+}
+
+.button-container button img {
+  width: 15px;
+  height: 15px;
+}
