--- a/Frontend/src/ProjectBoard.css
+++ b/Frontend/src/ProjectBoard.css
@@ -38,23 +38,21 @@
 }
 
 .dropdown-menu {
+  display: flex;
+  flex-direction: row;
   position: absolute;
-  top: 100%;
-  right: 0;
+  top: 7%;
+  right: 50px; /* Adjust this value as needed */
   background-color: #fff;
-  border:2px solid #000;
-  box-shadow: 0px 15px rgba(0, 0, 0, 0.1);
+  border: 2px solid #000;
+  box-shadow: 0px 12`0px rgba(0, 0, 0, 0.1);
   padding: 10px;
 }
 
 .menu-item {
-  display: block;
-  width: 100%;
-  padding: 8px;
-  margin-bottom: 8px;
+  margin-right: 10px; /* Adjust the spacing between menu items */
   background-color: #f0f0f0;
   border: none;
-  text-align: left;
   cursor: pointer;
 }
 
@@ -62,6 +60,4 @@
   width: 24px;
   height: 24px;
   background-color: #f0f0f0;
-  border-radius: 4px;
-  padding: 4px;
 }
