--- a/Frontend/src/login.css
+++ b/Frontend/src/login.css
@@ -85,10 +85,6 @@ input:focus {
 }
 
 
-.form-container {
-  flex: 1;
-}
-
 .image-container {
   flex: 1;
   text-align: right;
@@ -114,3 +110,14 @@ input:focus {
   font-size: 0.8em;
   font-family: 'Madimi One', sans-serif;
 }
+
+.error-message {
+  text-align: left;
+  margin-left: 400px; /* Adjust this value based on your layout */
+  max-width: 600px;
+  color: red; /* or any color you prefer */
+  font-size: 1em; /* Adjust the font size as needed */
+  font-family: 'Madimi One', sans-serif;
+}
+
+/* Add this style if you want some space between the error message and the button */
