--- a/Frontend/src/ProjectBoard.css
+++ b/Frontend/src/ProjectBoard.css
@@ -33,6 +33,7 @@ html, body {
   border-radius: 50%;
   border: 4px solid #000;
   box-sizing: border-box;
+  background-color: #6f4f86;
 }
 
 .website-name::after {
