--- a/Frontend/src/components/css/UserRegister.css
+++ b/Frontend/src/components/css/UserRegister.css
@@ -1,6 +1,69 @@
 
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url('lowfi.jpg'); /* Update the path accordingly */
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
 
 
+.form-container {
+  background-color: rgba(255, 255, 255, 0.8); /* Example: semi-transparent white background for the form */
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+  font-family: 'Madimi One', sans-serif;
+  text-align: left; /* Center align the content */
+  font-size: 5px/;
+
+}
+.centered-heading {
+  text-align: center; /* Center align the heading */
+}
+
+.form-label {
+  display: block;
+  margin-bottom: 5px;
+
+}
+
+.form-input {
+  border: 1px solid #ccc;
+  padding: 10px;
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
+
+.name-container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.name-input {
+  width: 48%;
+  margin-bottom: 10px;
+}
 
 
+.form-button {
+  border: none;
+  background-image: url('register.png');
+  background-size: cover;
+  width: 40px;
+  height: 40px;
+}
 
+.form-button.cancel {
+  background-image: url('cancel.png');
+  width: 40px;
+  height: 40px;
+}
