some css and dropdown for meneger vs develoepr

--- a/Frontend/src/components/css/UserInformation.css
+++ b/Frontend/src/components/css/UserInformation.css
@@ -1,2 +1,90 @@
+/* UserInformation.css */
+body {
+    margin: 0;
+    padding: 0;
+    background-color: #d3cfd3;
+}
 
+.UserInformation {
+    max-width: 800px;
+    margin: 20px auto;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background-color: white;
+}
 
+.UserInformation h2 {
+    background-color: #6f4f86; /* Purple background */
+    color: #b7a57a; /* Gold text color */
+    padding: 10px;
+    border-radius: 8px; /* Rounded corners for the title background */
+    text-align: center;
+    /* Additional styles for shadow, spacing, etc., can be added here if desired */
+}
+
+label {
+    font-family: 'Madimi One', sans-serif;
+    font-size: 18px;
+    display: block;
+    margin: 10px 0;
+}
+
+input[type="text"],
+input[type="number"],
+input[type="email"],
+input[type="date"] {
+    font-family: 'Arial', sans-serif;
+    width: calc(100% - 22px);
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    background-color: #f4f4f4;
+}
+
+button {
+    background-color: #6f4f86;
+    color: #b7a57a;
+    font-family: 'Madimi One', sans-serif;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    font-size: 18px;
+    display: block;
+
+    margin-top: 20px;
+}
+
+button:hover {
+    background-color: #7f76a8;
+}
+
+.button-create-project {
+    background-color: #6f4f86;
+    color: #b7a57a;
+    font-family: 'Madimi One', sans-serif;
+    padding: 10px 15px;
+    text-align: center;
+    display: inline-block;
+    border-radius: 8px;
+    text-decoration: none;
+    font-size: 18px;
+    margin-top: 20px;
+    display: block;
+    width: 50%;
+
+}
+
+.button-create-project:hover {
+    background-color: #7f76a8;
+
+}
+
+@media (max-width: 768px) {
+    .UserInformation {
+        width: 90%;
+    }
+}
