--- a/Frontend/src/components/css/ProjectList.css
+++ b/Frontend/src/components/css/ProjectList.css
@@ -61,8 +61,8 @@
   align-items: center;
   padding: 5px;
   margin-bottom: 5px;
-  background-color: rgba(255, 255, 255, 0.8);
   border: none;
+  background: none;
   cursor: pointer;
 }
 
