--- a/Frontend/src/components/css/UserRegister.css
+++ b/Frontend/src/components/css/UserRegister.css
@@ -8,7 +8,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url('lowfi.jpg'); /* Update the path accordingly */
+  background-image: url('lowfi.jpg'); 
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -16,17 +16,17 @@
 
 
 .form-container {
-  background-color: rgba(255, 255, 255, 0.8); /* Example: semi-transparent white background for the form */
+  background-color: rgba(255, 255, 255, 0.8); 
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
   font-family: 'Madimi One', sans-serif;
-  text-align: left; /* Center align the content */
-  font-size: 5px/;
+  text-align: left; 
+  font-size: 5px;
 
 }
 .centered-heading {
-  text-align: center; /* Center align the heading */
+  text-align: center; 
 }
 
 .form-label {
