--- a/Frontend/src/components/css/TaskBoard.css
+++ b/Frontend/src/components/css/TaskBoard.css
@@ -2,21 +2,21 @@
   font-family: 'Madimi One', sans-serif;
   font-size: 30px;
   color: #b7a57a;
-  background-color: #6f4f86; /* Choose your desired background color */
-  padding: 5px; /* Adjust padding as needed */
-  border-radius: 20px; /* Optional: Add border-radius for rounded corners */
-  display: inline-block; /* Adjust width based on title length */
-  margin-bottom: 15px; /* Optional: Add margin to separate it from the ProjectList */
+  background-color: #6f4f86; 
+  padding: 5px; 
+  border-radius: 20px; 
+  display: inline-block; 
+  margin-bottom: 15px; 
 }
 
 .task-board-title {
   display: inline-block;
   margin: 20px;
-  padding: 10px; /* Adjust padding as needed */
+  padding: 10px; 
   font-family: 'Madimi One', sans-serif;
   font-size: 50px;
-  background-color: #6f4f86; /* Choose your desired background color */
-  border-radius: 20px; /* Optional: Add border-radius for rounded corners */
+  background-color: #6f4f86; 
+  border-radius: 20px; 
   color: #b7a57a;
 }
 
