--- a/Frontend/src/components/css/TaskList.css
+++ b/Frontend/src/components/css/TaskList.css
@@ -10,19 +10,19 @@
    font-family: 'Madimi One', sans-serif;
   margin: 10px;
   background: url("stinkynote.png") no-repeat center center;
-  background-color: #f9f7f0; /* Sticky note background color */
+  background-color: #f9f7f0; 
   border: 1px solid #ccc;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  overflow: hidden; /* Prevent long text from overflowing */
-  word-wrap: break-word; /* Allow long words to break and wrap to the next line */
+  overflow: hidden; 
+  word-wrap: break-word; 
 }
 
 .task-item-sticky-note h3 {
   margin-top: 0;
   overflow: hidden;
   white-space: nowrap;
-  text-overflow: ellipsis; /* Add ellipsis if h3 text overflows */
+  text-overflow: ellipsis; 
 }
 
 
