--- a/Frontend/src/components/css/developerStatics.css
+++ b/Frontend/src/components/css/developerStatics.css
@@ -85,10 +85,10 @@ body {
     display: block;
     font-size: 60px;
     color: #3498db;
-    background-image: url('dashboard.png'); /* Replace with your image path */
+    background-image: url('dashboard.png'); 
     background-repeat: no-repeat;
-    background-size: 80px; /* Adjust the size as needed */
-    padding-left: 100px; /* Adjust padding for spacing */
+    background-size: 80px; 
+    padding-left: 100px; 
 }
 
 .back-to-dashboard:hover {
